--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.2.0",
     "clsx": "^2.1.1",
-    "cookie": "^0.6.0",
+    "cookie": "^1.0.2",
     "jose": "^5.2.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.378.0",
-    "next": "14.2.3",
+    "next": "^14.2.33",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
