--- a/package.json
+++ b/package.json
@@ -16,21 +16,26 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.2.5",
+    "@types/jspdf": "^1.3.3",
+    "@types/leaflet": "^1.9.20",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.1.0",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.2.0",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
     "jose": "^5.2.4",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.3",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.378.0",
     "next": "^14.2.33",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "resend": "^3.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
